--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
   <title>Juan</title>
 </head>
 <body>
-  
+  <header>
+    <div class="containerhead">
+      <img src="./images/logo.png" alt="Logo">
+      <nav class="header__nav">
+        <ul>
+          <li class="li-header"><a href="#">Portafolio</a></li>
+          <li class="li-header"><a href="#">fotografias</a></li>
+          <li class="li-header"><a href="#">Contactos</a></li>
+          <li class="li-header" ><a href="#">Sistema de archivos</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 </html>
