--- a/index.html
+++ b/index.html
@@ -23,5 +23,103 @@
       </nav>
     </div>
   </header>
+  <main>
+    <section class="hero">
+      <div id="l" class="container-Hero">
+        <h1> Hola! Soy  <strong> Juan Tello </strong> <br> Estudiante de <strong> Platzi </strong>  en <br> la Escuela de <strong>Desarrollo Web</strong></h1>
+        <img src="./images/Jua.jpg" alt="Juan.">
+      </div>
+    </section>
+    <section class="portfolio">
+      <h2>Portafolio Y proyectos Desatacados</h2>
+      <article class="article-portafolio">
+        <div class="content-portafolio">
+          <h3>Platzi Juego</h3>
+          <h6>Unity and c#</h6>
+          <p class="fecha"><small><strong>Fecha:</strong>14-08-2020</small></p>
+          <p class="puedes"> <small><strong>Puedes verlo:</strong> <a href="#">Aqui</a> </small> </p>
+          <p>Platzi juego fue mi ultimo proyecto que realize, cuando estaba cursando programacion en unity 2D en el cual adquiri habilidades como animacion de personajes, 
+            implementacion de un sistema de particulas en 2D, la creacion de escenarios utilizado la herramienta del tilemap, 
+            la conexion de escenarios 2D y juntarlo en codigo c#.
+          </p>
+        </div>
+        <figure class="container-image">
+    
+          <img src="./images/Platform.jpg" alt="">
+        </figure>
+      </article>
+      <article class="article-portafolio">
+        <div class="content-portafolio">
+          <h3>Platzi Juego</h3>
+          <h6>Unity and c#</h6>
+          <p class="fecha"><small><strong>Fecha:</strong>14-08-2020</small></p>
+          <p class="puedes"> <small><strong>Puedes verlo:</strong> <a href="#">Aqui</a> </small> </p>
+          <p>Platzi juego fue mi ultimo proyecto que realize, cuando estaba cursando programacion en unity 2D en el cual adquiri habilidades como animacion de personajes, 
+            implementacion de un sistema de particulas en 2D, la creacion de escenarios utilizado la herramienta del tilemap, 
+            la conexion de escenarios 2D y juntarlo en codigo c#.
+          </p>
+        </div>
+        <figure class="container-image">
+          <img src="./images/Platform.jpg" alt="">
+        </figure>
+      </article>
+    </section>
+    <div class="Title-photo"><h2>Pasatiempo Capturar momentos</h2></div>
+    <section class="photography">
+      <article class="article-Photo">
+        <div class="container-img">
+          <img src="./images/quilotoa.jpg" alt="">
+        </div>
+        <div class="container-texto">
+          <h3>Quilotoa 2019</h3>
+          <p>Este lugar fue fantastico se encuentra en los andes del Ecuador en la provincia de Cotopaxi
+            lo visite en una convivencia que realizamos con mis compañeros de curso para hacer un programa navideño con juegos tradicionales en una escuela
+            disfrute mucho este lugar y la covivencia con los niños fue espectacular! el video de esta convivencia lo pueden encontrar en:
+          </p>
+          <a href="#">Ver Video</a>
+        </div>
+      </article>
+      <article class="article-Photo">
+        <div class="container-img">
+          <img src="./images/quilotoa.jpg" alt="">
+        </div>
+        <div class="container-texto">
+          <h3>Quilotoa 2019</h3>
+          <p>Este lugar fue fantastico se encuentra en los andes del Ecuador en la provincia de Cotopaxi
+            lo visite en una convivencia que realizamos con mis compañeros de curso para hacer un programa navideño con juegos tradicionales en una escuela
+            disfrute mucho este lugar y la covivencia con los niños fue espectacular! el video de esta convivencia lo pueden encontrar en:
+          </p>
+          <a href="#">Ver Video</a>
+        </div>
+      </article>
+      <article class="article-Photo">
+        <div class="container-img">
+          <img src="./images/quilotoa.jpg" alt="">
+        </div>
+        <div class="container-texto">
+          <h3>Quilotoa 2019</h3>
+          <p>Este lugar fue fantastico se encuentra en los andes del Ecuador en la provincia de Cotopaxi
+            lo visite en una convivencia que realizamos con mis compañeros de curso para hacer un programa navideño con juegos tradicionales en una escuela
+            disfrute mucho este lugar y la covivencia con los niños fue espectacular! el video de esta convivencia lo pueden encontrar en:
+          </p>
+          <a href="#">Ver Video</a>
+        </div>
+      </article>
+      <article class="article-Photo">
+        <div class="container-img">
+          <img src="./images/quilotoa.jpg" alt="">
+        </div>
+        <div class="container-texto">
+          <h3>Quilotoa 2019</h3>
+          <p>Este lugar fue fantastico se encuentra en los andes del Ecuador en la provincia de Cotopaxi
+            lo visite en una convivencia que realizamos con mis compañeros de curso para hacer un programa navideño con juegos tradicionales en una escuela
+            disfrute mucho este lugar y la covivencia con los niños fue espectacular! el video de esta convivencia lo pueden encontrar en:
+          </p>
+          <a href="#">Ver Video</a>
+        </div>
+      </article>
+    </section>
+    <section></section>
+  </main>
 </body>
 </html>
