main acabado xD

--- a/index.html
+++ b/index.html
@@ -119,7 +119,23 @@
         </div>
       </article>
     </section>
-    <section></section>
+    <section class="Datos">
+      <div class="container">
+        <div class="Inputs">
+          <label for="email">
+            <span>Quieres Comunicarte?</span>
+            <input   class="text" type="text" placeholder="Dejame tu email" name="" id="email">
+            <input class="submit" type="submit" value="Enviar">
+          </label>
+        </div>
+        <div class="RedSocial">
+          <a href="https://twitter.com/JuanSTQ" class="social-link twitter" target="_blank"></a>
+          <a href="https://www.facebook.com/juansebastian.telloquinteros" class="social-link facebook" target="_blank" ></a>
+          <a href="https://www.youtube.com/channel/UCLhgZwXNgmmoCvIUSgycWYQ?view_as=subscriber" class="social-link youtube" target="_blank"></a>
+          <a href="https://www.youtube.com/channel/UCLhgZwXNgmmoCvIUSgycWYQ?view_as=subscriber" class="social-link instagram" target="_blank" ></a>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
