--- a/index.html
+++ b/index.html
@@ -137,5 +137,14 @@
       </div>
     </section>
   </main>
+  <footer>
+      <div class="dere">
+        <p>Curso de desarrollo web online 2020</p>
+        <img src="./images/platzi.png" alt="">
+      </div>
+      <div class="izq">
+        <p>Design by <a href="">juanstq</a></p>
+      </div>
+  </footer>
 </body>
 </html>
