--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image.png" href="./images/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-  <title>Juan</title>
+  <title>Juan Tello OFICIAL</title>
 </head>
 <body>
   <header>
@@ -15,21 +15,21 @@
       <img src="./images/logo.png" alt="Logo">
       <nav class="header__nav">
         <ul>
-          <li class="li-header"><a href="#">Portafolio</a></li>
-          <li class="li-header"><a href="#">fotografias</a></li>
-          <li class="li-header"><a href="#">Contactos</a></li>
-          <li class="li-header" ><a href="#">Sistema de archivos</a></li>
+          <li class="li-header"><a href="#Portafolio">Portafolio</a></li>
+          <li class="li-header"><a href="#Pasatiempo">fotografias</a></li>
+          <li class="li-header"><a href="#contactos">Trabajemos juntos</a></li>
+  
         </ul>
       </nav>
     </div>
   </header>
-  <main>
-    <section class="hero">
-      <div id="l" class="container-Hero">
-        <h1> Hola! Soy  <strong> Juan Tello </strong> <br> Estudiante de <strong> Platzi </strong>  en <br> la Escuela de <strong>Desarrollo Web</strong></h1>
-        <img src="./images/Jua.jpg" alt="Juan.">
-      </div>
-    </section>
+  <section class="hero">
+    <div id="l" class="container-Hero">
+      <h1 id="Portafolio" > Hola! Soy  <strong> Juan Tello </strong> <br> Estudiante de <strong> Platzi </strong>  en <br> la Escuela de <strong>Desarrollo Web</strong></h1>
+      <img src="./images/Jua.jpg" alt="Juan.">
+    </div>
+  </section> 
+   <main>
     <section class="portfolio">
       <h2>Portafolio Y proyectos Desatacados</h2>
       <article class="article-portafolio">
@@ -38,7 +38,7 @@
           <h6>Unity and c#</h6>
           <p class="fecha"><small><strong>Fecha:</strong>14-08-2020</small></p>
           <p class="puedes"> <small><strong>Puedes verlo:</strong> <a href="#">Aqui</a> </small> </p>
-          <p>Platzi juego fue mi ultimo proyecto que realize, cuando estaba cursando programacion en unity 2D en el cual adquiri habilidades como animacion de personajes, 
+          <p class="description" >Platzi juego fue mi ultimo proyecto que realize, cuando estaba cursando programacion en unity 2D en el cual adquiri habilidades como animacion de personajes, 
             implementacion de un sistema de particulas en 2D, la creacion de escenarios utilizado la herramienta del tilemap, 
             la conexion de escenarios 2D y juntarlo en codigo c#.
           </p>
@@ -54,7 +54,7 @@
           <h6>Unity and c#</h6>
           <p class="fecha"><small><strong>Fecha:</strong>14-08-2020</small></p>
           <p class="puedes"> <small><strong>Puedes verlo:</strong> <a href="#">Aqui</a> </small> </p>
-          <p>Platzi juego fue mi ultimo proyecto que realize, cuando estaba cursando programacion en unity 2D en el cual adquiri habilidades como animacion de personajes, 
+          <p class="description" >Platzi juego fue mi ultimo proyecto que realize, cuando estaba cursando programacion en unity 2D en el cual adquiri habilidades como animacion de personajes, 
             implementacion de un sistema de particulas en 2D, la creacion de escenarios utilizado la herramienta del tilemap, 
             la conexion de escenarios 2D y juntarlo en codigo c#.
           </p>
@@ -64,7 +64,7 @@
         </figure>
       </article>
     </section>
-    <div class="Title-photo"><h2>Pasatiempo Capturar momentos</h2></div>
+    <div class="Title-photo"><h2 id="Pasatiempo" >Pasatiempo Capturar momentos</h2></div>
     <section class="photography">
       <article class="article-Photo">
         <div class="container-img">
@@ -119,32 +119,34 @@
         </div>
       </article>
     </section>
-    <section class="Datos">
-      <div class="container">
-        <div class="Inputs">
-          <label for="email">
-            <span>Quieres Comunicarte?</span>
-            <input   class="text" type="text" placeholder="Dejame tu email" name="" id="email">
-            <input class="submit" type="submit" value="Enviar">
-          </label>
-        </div>
-        <div class="RedSocial">
-          <a href="https://twitter.com/JuanSTQ" class="social-link twitter" target="_blank"></a>
-          <a href="https://www.facebook.com/juansebastian.telloquinteros" class="social-link facebook" target="_blank" ></a>
-          <a href="https://www.youtube.com/channel/UCLhgZwXNgmmoCvIUSgycWYQ?view_as=subscriber" class="social-link youtube" target="_blank"></a>
-          <a href="https://www.youtube.com/channel/UCLhgZwXNgmmoCvIUSgycWYQ?view_as=subscriber" class="social-link instagram" target="_blank" ></a>
-        </div>
-      </div>
-    </section>
   </main>
+      <section id="contactos" class="Datos">
+        <div class="container">
+          <div class="Inputs">
+            <label for="email">
+              <span class="group-input" >Quieres Comunicarte?</span>
+              <input   class="text group-input" type="text" placeholder="Dejame tu email" name="" id="email">
+              <input class="submit group-input" type="submit" value="Enviar">
+            </label>
+          </div>
+          <div class="RedSocial">
+            <a href="https://twitter.com/JuanSTQ" class="social-link icon-twitter" target="_blank"></a>
+            <a href="https://www.facebook.com/juansebastian.telloquinteros" class="social-link icon-facebook" target="_blank" ></a>
+            <a href="https://www.youtube.com/channel/UCLhgZwXNgmmoCvIUSgycWYQ?view_as=subscriber" class="social-link icon-github" target="_blank"></a>
+            <a href="https://www.youtube.com/channel/UCLhgZwXNgmmoCvIUSgycWYQ?view_as=subscriber" class="social-link icon-instagram" target="_blank" ></a>
+          </div>
+        </div>
+      </section>  
   <footer>
-      <div class="dere">
-        <p>Curso de desarrollo web online 2020</p>
-        <img src="./images/platzi.png" alt="">
-      </div>
-      <div class="izq">
-        <p>Design by <a href="">juanstq</a></p>
-      </div>
-  </footer>
+     <section class="container-foot">
+       <div class="dere">
+         <p>Curso de desarrollo web online 2020</p>
+         <img src="./images/platzi.png" alt="">
+       </div>
+       <div class="izq">
+         <p>Design by <a href="">juanstq</a></p>
+       </div>
+     </section>
+  </footer> 
 </body>
 </html>
