--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <icon class="icon-menu menuH"></icon>
   <header>
     <div class="containerhead">
-      <img src="./images/logo.png" alt="Logo">
+      <img src="./images/logoj.png" alt="Logo">
       <nav class="header__nav">
         <ul>
           <li class="li-header"><a class="anclaH" href="#Portafolio">Portafolio</a></li>
@@ -82,10 +82,10 @@
       </article>
       <article class="article-Photo">
         <div class="container-img">
-          <img src="./images/quilotoa.jpg" alt="">
+          <img src="./images/Navidad.jpg" alt="">
         </div>
         <div class="container-texto">
-          <h3>Quilotoa 2019</h3>
+          <h3>En mi hause xd</h3>
           <p>Este lugar fue fantastico se encuentra en los andes del Ecuador en la provincia de Cotopaxi
             lo visite en una convivencia que realizamos con mis compañeros de curso para hacer un programa navideño con juegos tradicionales en una escuela
             disfrute mucho este lugar y la covivencia con los niños fue espectacular! el video de esta convivencia lo pueden encontrar en:
@@ -95,10 +95,10 @@
       </article>
       <article class="article-Photo">
         <div class="container-img">
-          <img src="./images/quilotoa.jpg" alt="">
+          <img src="./images/Tasinteo.jpg" alt="">
         </div>
         <div class="container-texto">
-          <h3>Quilotoa 2019</h3>
+          <h3>Tasinteo 2020</h3>
           <p>Este lugar fue fantastico se encuentra en los andes del Ecuador en la provincia de Cotopaxi
             lo visite en una convivencia que realizamos con mis compañeros de curso para hacer un programa navideño con juegos tradicionales en una escuela
             disfrute mucho este lugar y la covivencia con los niños fue espectacular! el video de esta convivencia lo pueden encontrar en:
@@ -108,10 +108,10 @@
       </article>
       <article class="article-Photo">
         <div class="container-img">
-          <img src="./images/quilotoa.jpg" alt="">
+          <img src="./images/DSC_1298.jpg" alt="">
         </div>
         <div class="container-texto">
-          <h3>Quilotoa 2019</h3>
+          <h3>... 2019</h3>
           <p>Este lugar fue fantastico se encuentra en los andes del Ecuador en la provincia de Cotopaxi
             lo visite en una convivencia que realizamos con mis compañeros de curso para hacer un programa navideño con juegos tradicionales en una escuela
             disfrute mucho este lugar y la covivencia con los niños fue espectacular! el video de esta convivencia lo pueden encontrar en:
@@ -133,7 +133,7 @@
           <div class="RedSocial">
             <a href="https://twitter.com/JuanSTQ" class="social-link icon-twitter" target="_blank"></a>
             <a href="https://www.facebook.com/juansebastian.telloquinteros" class="social-link icon-facebook" target="_blank" ></a>
-            <a href="https://www.youtube.com/channel/UCLhgZwXNgmmoCvIUSgycWYQ?view_as=subscriber" class="social-link icon-github" target="_blank"></a>
+            <a href="https://github.com/JuanSTQ" class="social-link icon-github" target="_blank"></a>
             <a href="https://www.youtube.com/channel/UCLhgZwXNgmmoCvIUSgycWYQ?view_as=subscriber" class="social-link icon-instagram" target="_blank" ></a>
           </div>
         </div>
@@ -145,7 +145,7 @@
          <img src="./images/platzi.png" alt="">
        </div>
        <div class="izq">
-         <p>Design by <a href="">juanstq</a></p>
+         <p>Design by <a href="">@juanstq</a></p>
        </div>
      </section>
   </footer> 
