--- a/index.html
+++ b/index.html
@@ -152,10 +152,14 @@
   <script>
  /*    Number = 0; */
     /* MEDIA QUERIS EN JAVA */
+    const menu = document.querySelector('.header__nav');
+    const iconoH = document.querySelector('.menuH');
+    const ancla1 = document.querySelector('.anclaH');
+    const ancla2 = document.querySelector('.anclaH2');
+    const ancla3 = document.querySelector('.anclaH3');
     const mobile = window.matchMedia('screen and (max-width:480px)');
-    mobile.addListener(validation);
     function validation(evento){
-      if(evento.matches){
+      if(evento.match){
         iconoH.addEventListener('click', active);
         ancla1.addEventListener('click', active);
         ancla2.addEventListener('click', active);
@@ -163,15 +167,12 @@
       }
       else{
         iconoH.removeEventListener('click', active);
+        ancla1.removeEventListener('click', active);
+        ancla2.removeEventListener('click', active);
+        ancla3.removeEventListener('click', active);
       }
     }
-
-    const menu = document.querySelector('.header__nav');
-    const iconoH = document.querySelector('.menuH');
-    const ancla1 = document.querySelector('.anclaH');
-    const ancla2 = document.querySelector('.anclaH2');
-    const ancla3 = document.querySelector('.anclaH3');
-
+    validation(mobile);
 
     function active(){
       /* Number++; */
