--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
         <div class="container-texto">
           <h3>Quilotoa 2019</h3>
           <p>Este lugar fue fantastico se encuentra en los andes del Ecuador en la provincia de Cotopaxi
-            lo visite en una convivencia que realizamos con mis compañeros de curso para hacer un programa navideño con juegos tradicionales en una escuela
-            disfrute mucho este lugar y la covivencia con los niños fue espectacular! el video de esta convivencia lo pueden encontrar en:
+            lo visite en una convivencia
           </p>
           <a href="#">Ver Video</a>
         </div>
@@ -87,8 +86,7 @@
         <div class="container-texto">
           <h3>En mi hause xd</h3>
           <p>Este lugar fue fantastico se encuentra en los andes del Ecuador en la provincia de Cotopaxi
-            lo visite en una convivencia que realizamos con mis compañeros de curso para hacer un programa navideño con juegos tradicionales en una escuela
-            disfrute mucho este lugar y la covivencia con los niños fue espectacular! el video de esta convivencia lo pueden encontrar en:
+            lo visite en una convivencia.
           </p>
           <a href="#">Ver Video</a>
         </div>
@@ -100,8 +98,7 @@
         <div class="container-texto">
           <h3>Tasinteo 2020</h3>
           <p>Este lugar fue fantastico se encuentra en los andes del Ecuador en la provincia de Cotopaxi
-            lo visite en una convivencia que realizamos con mis compañeros de curso para hacer un programa navideño con juegos tradicionales en una escuela
-            disfrute mucho este lugar y la covivencia con los niños fue espectacular! el video de esta convivencia lo pueden encontrar en:
+            lo visite en una convivencia
           </p>
           <a href="#">Ver Video</a>
         </div>
@@ -113,8 +110,7 @@
         <div class="container-texto">
           <h3>... 2019</h3>
           <p>Este lugar fue fantastico se encuentra en los andes del Ecuador en la provincia de Cotopaxi
-            lo visite en una convivencia que realizamos con mis compañeros de curso para hacer un programa navideño con juegos tradicionales en una escuela
-            disfrute mucho este lugar y la covivencia con los niños fue espectacular! el video de esta convivencia lo pueden encontrar en:
+            lo visite en una convivencia
           </p>
           <a href="#">Ver Video</a>
         </div>
