--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </header>
   <section class="hero">
     <div id="l" class="container-Hero">
-      <h1 id="Portafolio" > Hola! Soy  <strong> Juan Tello </strong> <br> Estudiante de <strong> Platzi </strong>  en <br> la Escuela de <strong>Desarrollo Web</strong></h1>
+      <h1 id="Portafolio" > Hola! Soy  <strong> Juan Tello </strong> <br> Soy un<strong> Desarrollador Jr (nub)</strong> <br> De <strong>Aplicaciones web</strong></h1>
       <img src="./images/Jua.jpg" alt="Juan.">
     </div>
   </section> 
@@ -35,33 +35,57 @@
       <h2>Portafolio Y proyectos Desatacados</h2>
       <article class="article-portafolio">
         <div class="content-portafolio">
-          <h3>Platzi Juego</h3>
-          <h6>Unity and c#</h6>
-          <p class="fecha"><small><strong>Fecha:</strong>14-08-2020</small></p>
-          <p class="puedes"> <small><strong>Puedes verlo:</strong> <a href="#">Aqui</a> </small> </p>
-          <p class="description" >Platzi juego fue mi ultimo proyecto que realize, cuando estaba cursando programacion en unity 2D en el cual adquiri habilidades como animacion de personajes, 
-            implementacion de un sistema de particulas en 2D, la creacion de escenarios utilizado la herramienta del tilemap, 
-            la conexion de escenarios 2D y juntarlo en codigo c#.
+          <h3>App de clima</h3>
+          <h6>Html, css y Javascript</h6>
+          <p class="fecha"><small><strong>Fecha:</strong>10-04-2021</small></p>
+          <p class="puedes"> <small><strong>Puedes verlo:</strong> <a  target="_blank" href="https://6064f285d270fc0007f0ddff--cranky-jackson-4efe0c.netlify.app/">Aqui</a> </small> </p>
+          <p class="description" >Realizado con puto Javascript vanilla en esta pagina uso la API DEL CLIMA de la pagina de 
+            <a href="https://openweathermap.org/api" target="_blank">open weather map</a> .
           </p>
         </div>
         <figure class="container-image">
     
-          <img src="./images/Platform.jpg" alt="">
+          <img src="./images/weatherAPP.jpg" alt="">
         </figure>
       </article>
       <article class="article-portafolio">
         <div class="content-portafolio">
-          <h3>Platzi Juego</h3>
-          <h6>Unity and c#</h6>
-          <p class="fecha"><small><strong>Fecha:</strong>14-08-2020</small></p>
-          <p class="puedes"> <small><strong>Puedes verlo:</strong> <a href="#">Aqui</a> </small> </p>
-          <p class="description" >Platzi juego fue mi ultimo proyecto que realize, cuando estaba cursando programacion en unity 2D en el cual adquiri habilidades como animacion de personajes, 
-            implementacion de un sistema de particulas en 2D, la creacion de escenarios utilizado la herramienta del tilemap, 
-            la conexion de escenarios 2D y juntarlo en codigo c#.
+          <h3>Rick and Morty</h3>
+          <h6>Html, css y Javascript</h6>
+          <p class="fecha"><small><strong>Fecha:</strong>21-03-2021</small></p>
+          <p class="puedes"> <small><strong>Puedes verlo:</strong> <a href="https://605e70e1a0cf9b47cfb6dab1--pedantic-archimedes-10f5e2.netlify.app/" target="_blank"  >Aqui</a> </small> </p>
+          <p class="description" >Aca practico con Javascript Vanilla desde cero practico usando una API llamada Rick and Morty 
           </p>
         </div>
         <figure class="container-image">
-          <img src="./images/Platform.jpg" alt="">
+          <img src="./images/rickmorty.jpg" alt="">
+        </figure>
+      </article>
+      <article class="article-portafolio">
+        <div class="content-portafolio">
+          <h3>Bateria</h3>
+          <h6>Html, css y Javascript</h6>
+          <p class="fecha"><small><strong>Fecha:</strong>15-03-2021</small></p>
+          <p class="puedes"> <small><strong>Puedes verlo:</strong> <a href="https://606aa9696caf8d00076b9df2--dazzling-stonebraker-7cbe45.netlify.app/" target="_blank"  >Aqui</a> </small> </p>
+          <p class="description" > Aca practico con Javascript Vanilla desde cero es in proyecto muy particular tienes que presionar algunas teclas o solamente 
+            usar tu mause para escuchar una cacion :D.
+          </p>
+        </div>
+        <figure class="container-image">
+          <img src="./images/Bateria.png" alt="">
+        </figure>
+      </article>
+      <article class="article-portafolio">
+        <div class="content-portafolio">
+          <h3>Tienda online Basica</h3>
+          <h6>Html, css, Javascript y React</h6>
+          <p class="fecha"><small><strong>Fecha:</strong>20-04-2021</small></p>
+          <p class="puedes"> <small><strong>Puedes verlo:</strong> <a href="https://enzardev.xyz/" target="_blank"  >Aqui</a> </small> </p>
+          <p class="description" > Integra herramientas como Strapi, PayPal y Google Maps usando el framework de React para desarrollar una tienda online con carrito de compras.
+          </p>
+        </div>
+        <figure class="container-image">
+          <img src="./images/carrito.png" alt="">
         </figure>
       </article>
     </section>
@@ -85,8 +109,7 @@
         </div>
         <div class="container-texto">
           <h3>En mi hause xd</h3>
-          <p>Este lugar fue fantastico se encuentra en los andes del Ecuador en la provincia de Cotopaxi
-            lo visite en una convivencia.
+          <p>Esta foto la tome en la terraza de mi casa XD
           </p>
           <a href="#">Ver Video</a>
         </div>
@@ -97,8 +120,8 @@
         </div>
         <div class="container-texto">
           <h3>Tasinteo 2020</h3>
-          <p>Este lugar fue fantastico se encuentra en los andes del Ecuador en la provincia de Cotopaxi
-            lo visite en una convivencia
+          <p>Este lugar fue fantastico se encuentra en los andes del Ecuador en la provincia de Tungurahue en el canton pillaro
+            y en el barrio Tasinteo. 
           </p>
           <a href="#">Ver Video</a>
         </div>
@@ -109,8 +132,7 @@
         </div>
         <div class="container-texto">
           <h3>... 2019</h3>
-          <p>Este lugar fue fantastico se encuentra en los andes del Ecuador en la provincia de Cotopaxi
-            lo visite en una convivencia
+          <p>Este lugar fue fantastico se encuentra en el Puerto Misahuallí esta es una parroquia rural de la provincia de Napo en Ecuador.
           </p>
           <a href="#">Ver Video</a>
         </div>
@@ -130,15 +152,13 @@
             <a href="https://twitter.com/JuanSTQ" class="social-link icon-twitter" target="_blank"></a>
             <a href="https://www.facebook.com/juansebastian.telloquinteros" class="social-link icon-facebook" target="_blank" ></a>
             <a href="https://github.com/JuanSTQ" class="social-link icon-github" target="_blank"></a>
-            <a href="https://www.youtube.com/channel/UCLhgZwXNgmmoCvIUSgycWYQ?view_as=subscriber" class="social-link icon-instagram" target="_blank" ></a>
           </div>
         </div>
       </section>  
   <footer>
      <section class="container-foot">
        <div class="dere">
-         <p>Curso de desarrollo web online 2020</p>
-         <img src="./images/platzi.png" alt="">
+         <p>JR en crecimiento :D</p>
        </div>
        <div class="izq">
          <p>Design by <a href="">@juanstq</a></p>
